UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
/* ... */
.reader-text-container {

  .page-name {
    text-align: center;
    font-size: 1.1em;
    display: none;
  }

  &.show-notes {
    .page {
      display: inherit;
    }

    .itj-notes .itj-note {
      display: inherit;
      margin-bottom: 2px;
      margin-top: 2px;
    }
  }


  .itj-notes .itj-note {
    display: none;
  }
}

.edition-note-wrapper {
  flex-basis: 50%;
  min-width: 50%;
  flex-grow: 1;
  padding: 0 5px;
  border-right: @lineColor solid 2px;
  display: inline-block;

  .edition-note-text {
    overflow-y: scroll;
    max-height: 300px;
  }

  .grant {
    border-top: @lineColor solid 2px;
  }
}

.bib-table {
  .bib-table-row {
    display: table-row;

    .bib-table-cell {
      display: table-cell;
      text-align: left;
      padding-left: 20px;
    }

    .bib-label {
      font-weight: bold;
      font-size: 100%;
      color: black;
      padding-left: 0;
    }
  }
}

.book-detail-wrapper {
  flex-basis: 30%;
  display: inline-block;
  margin-left: 10px;
  overflow: hidden;

  @media screen and (max-width: @mobile-max-width) {
    width: auto;
  }
}

.reader-audio-container {
  padding: 1rem;

  h3 {
    margin: 0 50px 10px 0;
    display: inline-block;
  }

  #track-select {
    height: 2em;
    float: right;
    max-width: 100%;
  }
  
  .loading-audio {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 5;
    background: rgba(0,0,0,0.2);
    padding-top: 2em;
  }

  @audioPlayerBackgroundColor: #eeeeee;

  .audio-player-container {
    background-color: @audioPlayerBackgroundColor;
    display: inline-flex;
    flex-wrap: nowrap;
    align-items: center;


    .control-buttons {
      padding-right: 1em;

      button {
        background-color: @audioPlayerBackgroundColor;

        &:hover, &:focus {
          background-color: darken(@audioPlayerBackgroundColor, 5%);
        }
      }
    }

    .full-progressbar {
      height: 0.4em;
      min-width: 10em;
      margin: 0 1em;
      background-color: darken(@audioPlayerBackgroundColor, 20%);
      position: relative;

      .current-progress {
        background-color: @button-hover-background-color;
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
      }
    }

    @media screen and (max-width: @mobile-max-width) {
      padding: 0 1em;
      width: 100%;
      flex-wrap: wrap-reverse;
      justify-content: space-between;

      .full-progressbar {
        width: calc(100% + 2em);
        margin: 0 -1em;
      }
    }
  }


  .audio-text {
    min-height: 1em;
  }

  .audio-download {
    float: right;
    text-align: right;

    a.audio-download-href {
      border-radius: 5px;
      background: @button-background-color;
      padding: 5px;
      color: white;
      text-decoration: none;
      font-weight: bold;
      font-family: "Arial";
      margin-left: .25rem;
      margin-top: .25rem;
      display: inline-block;

      &:hover {
        background-color: @button-hover-background-color;
        opacity: 1;
        cursor: pointer;
      }
    }
  }
}

.loading :nth-child(n) {
  display: none;
}

.view-control {
  float: right;
  min-width: 310px;
  text-align: right;
  margin-top: 0.7rem;

  .buttons {
    float: none;
    text-align: right;
    display: inline-block;
    margin: 0;
  }

  @media screen and (max-width: @mobile-max-width) {
    float: none;
    text-align: center !important;
    min-width: unset;

    .buttons {
      display: block;
      text-align: inherit;
    }
  }
}

.reader-controls {
  text-align: center;

  .page-navigation-container-helper {
    display: inline-block;
    margin-top: 2rem;

    @media screen and (max-width: @mobile-max-width) {
      margin: 0.5rem 0 1rem !important;
    }
  }

  @media screen and (max-width: @mobile-max-width) {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  &:after {
    content: '';
    display: block;
    clear: both;
  }

  .buttons button {
    width: 65px;
    margin-left: 0;
    @media screen and (max-width: @mobile-max-width) {
      margin-left: 1rem;

      .glyphicon {
        font-size: 2.5em;
      }
    }
  }
}

.hidden {
  display: none;
}


#book-info-modal {
  @media screen and (max-width: @mobile-max-width) {
    .modal-title {
      display: inline-block;
      font-size: 18px;
    }

    .close {
      position: absolute;
      top: 20px;
      right: 20px;
    }

    .modal-body {
      overflow-y: scroll;
      max-height: 400px;

      .edition-note-wrapper {
        width: 100% !important;
        border: none;
        padding: 0px;

        .edition-note-text {
          overflow-y: unset;
          max-height: none;
        }
      }
    }
  }
}

.regex-search-div {
  @media screen and (max-width: @mobile-max-width) {
    .searchbar-button:nth-child(2), .regexsearch-input-button {
      display: none;
    }

    .regex-searchbar-inputs {
      margin-right: 90px;
    }
  }
}

.page-navigation-container-helper {
  @media screen and (max-width: @mobile-max-width) {
    float: left;
    padding: 4px 0 !important;
    .pagination-sm {
      margin: 0 !important;

      .page, .more-pages {
        display: none !important;

        &.page-active {
          display: inline-block !important;
          min-width: unset;

          a {
            padding-left: 0;
            padding-right: 0;
          }
        }
      }
    }
  }
}

.page-input {
  @media screen and (max-width: @mobile-max-width) {
    float: right !important;
    margin: 0.5rem 0 1rem 1rem !important;
  }
}

@media screen and (max-width: @mobile-max-width) {
  .fullscreen {
    #ReaderBodyDiv {
      margin: 0;
      height: calc(~'100% - 170px');
    }

    #ReaderHeaderDiv {
      height: 115px;
    }

    .view-control, .tool-panel {
      display: none;
    }
  }

  .tt-menu {
    width: calc(~'100% + 38px');
  }
}

